tests/programs/invalid/MultiDimensionalArrayExample.java
public class MultiDimensionalArrayExample {
    public static void main(String[] args) {
        int[][] multiArray = new int[3][3];  // Invalid multidimensional array
    }
}
